--- a/index.html
+++ b/index.html
@@ -164,11 +164,56 @@
 
   <script>
     const questions = [
-      { question: "Wie lautet Goethes Vorname?", answers: ["Johann Wolfgang", "Friedrich", "Ludwig", "Heinrich"], correct: 0 },
-      { question: "Welches Werk stammt von Goethe?", answers: ["Faust", "Die Räuber", "Kabale und Liebe", "Der zerbrochne Krug"], correct: 0 },
-      { question: "In welcher Stadt wurde Goethe geboren?", answers: ["Frankfurt am Main", "Weimar", "Leipzig", "Berlin"], correct: 0 },
-      { question: "Welcher Beruf war Goethe NICHT?", answers: ["Bäcker", "Dichter", "Naturforscher", "Minister"], correct: 0 }
+      { question: "Wie lautet Goethes vollständiger Name?", answers: ["Johann Wolfgang von Goethe", "Johann Sebastian Goethe", "Friedrich von Goethe", "Ludwig Wolfgang Goethe"], correct: 0 },
+      { question: "In welchem Jahr wurde Goethe geboren?", answers: ["1749", "1776", "1755", "1789"], correct: 0 },
+      { question: "Welche Stadt war Goethes Geburtsort?", answers: ["Frankfurt am Main", "Weimar", "Leipzig", "Berlin"], correct: 0 },
+      { question: "Welches berühmte Werk schrieb Goethe?", answers: ["Faust", "Die Räuber", "Der zerbrochne Krug", "Nathan der Weise"], correct: 0 },
+      { question: "Wie heißt Goethes bekanntester Pakt mit dem Teufel?", answers: ["Faust", "Mephisto", "Erlkönig", "Gretchenfrage"], correct: 0 },
+      { question: "Welche Naturwissenschaft interessierte Goethe besonders?", answers: ["Botanik", "Physik", "Chemie", "Astronomie"], correct: 0 },
+      { question: "In welcher Stadt lebte Goethe viele Jahre?", answers: ["Weimar", "Hamburg", "München", "Dresden"], correct: 0 },
+      { question: "Welche Farbe erforschte Goethe intensiv?", answers: ["Blau", "Gelb", "Grün", "Farben allgemein"], correct: 3 },
+      { question: "Wie hieß Goethes große Liebe in jungen Jahren?", answers: ["Lotte", "Charlotte Buff", "Friederike", "Anna Amalia"], correct: 1 },
+      { question: "Wer war Goethes Gegenspieler im 'Sturm und Drang'?", answers: ["Schiller", "Lessing", "Herder", "Klopstock"], correct: 0 },
+      { question: "Wann starb Goethe?", answers: ["1832", "1815", "1848", "1820"], correct: 0 },
+      { question: "Welches Drama schrieb Goethe NICHT?", answers: ["Die Räuber", "Egmont", "Iphigenie auf Tauris", "Torquato Tasso"], correct: 0 },
+      { question: "Was war Goethes Beruf neben dem Schreiben?", answers: ["Minister", "Soldat", "Schneider", "Arzt"], correct: 0 },
+      { question: "Wie hieß Goethes Sohn?", answers: ["August", "Karl", "Wilhelm", "Ludwig"], correct: 0 },
+      { question: "Welches Gedicht stammt von Goethe?", answers: ["Der Erlkönig", "Die Loreley", "An den Mond", "Mondnacht"], correct: 0 },
+      { question: "Wer war Goethes langjähriger Freund und Kollege?", answers: ["Schiller", "Heine", "Kant", "Mozart"], correct: 0 },
+      { question: "Wie heißt Goethes autobiografisches Werk?", answers: ["Dichtung und Wahrheit", "Mein Leben", "Goethes Welt", "Aus dem Leben eines Poeten"], correct: 0 },
+      { question: "Wie hieß Goethes Vater?", answers: ["Johann Caspar", "Karl Friedrich", "August Wilhelm", "Heinrich"], correct: 0 },
+      { question: "In welchem Werk erscheint der Charakter 'Gretchen'?", answers: ["Faust", "Wilhelm Meister", "Tasso", "Werther"], correct: 0 },
+      { question: "Welche italienische Stadt liebte Goethe?", answers: ["Rom", "Neapel", "Mailand", "Venedig"], correct: 0 },
+      { question: "Wie heißt das Werk mit der Figur 'Werther'?", answers: ["Die Leiden des jungen Werthers", "Werthers Abschied", "Der junge Werther", "Leiden und Liebe"], correct: 0 },
+      { question: "Goethes Zitat: 'Mehr Licht!' – In welchem Zusammenhang?", answers: ["Seine letzten Worte", "Beginn von 'Faust'", "Rede in Weimar", "Brief an Schiller"], correct: 0 },
+      { question: "Welches Element war für Goethe Symbol der Naturkraft?", answers: ["Wasser", "Licht", "Feuer", "Luft"], correct: 1 },
+      { question: "Wie heißt Goethes Ballade mit einem Zauberlehrling?", answers: ["Der Zauberlehrling", "Faust II", "Der Schüler", "Hexenstunde"], correct: 0 },
+      { question: "In welchem Land war Goethe als junger Mann?", answers: ["Italien", "England", "Griechenland", "Spanien"], correct: 0 },
+      { question: "Mit wem führte Goethe eine berühmte Korrespondenz?", answers: ["Schiller", "Napoleon", "Beethoven", "Humboldt"], correct: 0 },
+      { question: "Wie hieß Goethes Lebensgefährtin und spätere Frau?", answers: ["Christiane Vulpius", "Charlotte Buff", "Friederike Brion", "Bettina Brentano"], correct: 0 },
+      { question: "Was war Goethes Beitrag zur Farbenlehre?", answers: ["Ein eigenes Werk", "Farbenrad", "Chemische Analyse", "Optisches Gerät"], correct: 0 },
+      { question: "Goethes Wohnhaus steht in...", answers: ["Weimar", "Frankfurt", "Dresden", "Leipzig"], correct: 0 },
+      { question: "Welcher Kaiser bewunderte Goethe?", answers: ["Napoleon", "Wilhelm II", "Franz I", "Friedrich der Große"], correct: 0 },
+      { question: "Wie viele Teile hat 'Faust'?", answers: ["2", "1", "3", "4"], correct: 0 },
+      { question: "Goethes berühmteste Naturwissenschaftliche These?", answers: ["Farbenlehre", "Pflanzenmetamorphose", "Blutkreislauf", "Erdbebenmodell"], correct: 1 },
+      { question: "Wie alt wurde Goethe?", answers: ["82", "75", "90", "70"], correct: 0 },
+      { question: "Goethe war Teil welcher literarischen Bewegung?", answers: ["Sturm und Drang", "Realismus", "Expressionismus", "Aufklärung"], correct: 0 },
+      { question: "Wer schrieb 'Die Räuber'?", answers: ["Schiller", "Goethe", "Lessing", "Büchner"], correct: 0 },
+      { question: "Was war Goethes Haltung zur Revolution?", answers: ["Skeptisch", "Befürworter", "Aktivist", "Unentschlossen"], correct: 0 },
+      { question: "Welcher Satz stammt aus 'Faust'?", answers: ["Hier bin ich Mensch, hier darf ich’s sein.", "Die Axt im Haus erspart den Zimmermann.", "Der Mensch ist, was er isst.", "Ich denke, also bin ich."], correct: 0 },
+      { question: "Wie hieß Goethes erste Gedichtsammlung?", answers: ["Gedichte", "Lyrische Blätter", "Junge Dichtung", "Keine eindeutige Sammlung"], correct: 3 },
+      { question: "Was war Goethes erstes Studium?", answers: ["Jura", "Theologie", "Philosophie", "Medizin"], correct: 0 },
+      { question: "Welches Theater leitete Goethe?", answers: ["Weimarer Hoftheater", "Berliner Ensemble", "Frankfurter Bühne", "Münchner Nationaltheater"], correct: 0 },
+      { question: "Goethes Verhältnis zur Religion war...", answers: ["kritisch und offen", "streng gläubig", "atheistisch", "agnostisch"], correct: 0 },
+      { question: "Was symbolisiert 'Gretchen' in 'Faust'?", answers: ["Unschuld", "Macht", "Wissenschaft", "Freiheit"], correct: 0 },
+      { question: "Was war Goethes Meinung zu Klassik?", answers: ["Er schuf die Weimarer Klassik", "Er lehnte sie ab", "Er war Romantiker", "Er kannte sie nicht"], correct: 0 },
+      { question: "Welches ist KEIN Werk von Goethe?", answers: ["Maria Stuart", "Faust", "Egmont", "Werther"], correct: 0 },
+      { question: "Was bedeutet 'Faustischer Mensch'?", answers: ["Wissensdurstig", "Ängstlich", "Gierig", "Höflich"], correct: 0 },
+      { question: "In welchem Werk befasst sich Goethe mit Bildung?", answers: ["Wilhelm Meisters Lehrjahre", "Faust", "Werther", "Egmont"], correct: 0 },
+      { question: "Was war Goethes Verhältnis zu Schiller?", answers: ["Freunde & Kollegen", "Feinde", "Keine Beziehung", "Lehrer-Schüler"], correct: 0 },
+      { question: "Was war Goethes letzter veröffentlichter Text?", answers: ["Faust II", "Zahme Xenien", "West-östlicher Divan", "Italienische Reise"], correct: 0 }
     ];
+
 
     let current = 0;
     let selected = null;
